--- a/models/yolov5s.yaml
+++ b/models/yolov5s.yaml
@@ -26,22 +26,24 @@ backbone:
 
 # YOLOv5 head
 head:
-  [[-1, 1, Conv, [512, 1, 1]],
-   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
-   [[-1, 6], 1, Concat, [1]],  # cat backbone P4
+  [[-1, 1, Conv, [512, 1, 1]], # 10
+   [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 11
+  #  [-1, 1, nn.Upsample, ["tuple32,42", None, 'nearest']],
+   [[-1, 6], 1, Concat, [1]],  # cat backbone P4, 12
    [-1, 3, BottleneckCSP, [512, False]],  # 13
 
-   [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
-   [[-1, 4], 1, Concat, [1]],  # cat backbone P3
+   [-1, 1, Conv, [256, 1, 1]], # 14
+   [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 15
+  #  [-1, 1, nn.Upsample, ["tuple64,84", None, 'nearest']],
+   [[-1, 4], 1, Concat, [1]],  # cat backbone P3, 16
    [-1, 3, BottleneckCSP, [256, False]],  # 17 (P3/8-small)
 
-   [-1, 1, Conv, [256, 3, 2]],
-   [[-1, 14], 1, Concat, [1]],  # cat head P4
+   [-1, 1, Conv, [256, 3, 2]], # 18
+   [[-1, 14], 1, Concat, [1]],  # cat head P4, 19
    [-1, 3, BottleneckCSP, [512, False]],  # 20 (P4/16-medium)
 
-   [-1, 1, Conv, [512, 3, 2]],
-   [[-1, 10], 1, Concat, [1]],  # cat head P5
+   [-1, 1, Conv, [512, 3, 2]], # 21
+   [[-1, 10], 1, Concat, [1]],  # cat head P5, 22
    [-1, 3, BottleneckCSP, [1024, False]],  # 23 (P5/32-large)
 
    [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
