--- a/models/yolov5m-roborock.yaml
+++ b/models/yolov5m-roborock.yaml
@@ -17,30 +17,28 @@ anchors:
 # YOLOv5 backbone
 backbone:
   # [from, number, module, args]
-    [[-1, 1, Conv, [64, 5, 2]],  # 0-P1/2
-   [-1, 1, Conv, [128, 3, 2]],  # 1-P2/4
-   [-1, 3, Bottleneck, [128]], # 2
-   [-1, 1, Conv, [256, 3, 2]],  # 3-P3/8
-   [-1, 9, Bottleneck, [256]], # 4
-   [-1, 1, Conv, [512, 3, 2]],  # 5-P4/16
-   [-1, 9, Bottleneck, [512]], # 6
-   [-1, 1, Conv, [1024, 3, 2]],  # 7-P5/32
-   [-1, 1, SPP, [1024, [5, 9, 13]]], # 8
-   [-1, 3, Bottleneck, [1024, False]],  # 9
+   [[-1, 1, Conv, [64, 5, 2, None, 1, True, 'relu']],  # 0-P1/2
+   [-1, 1, Conv, [128, 3, 2, None, 1, True, 'relu']],  # 1-P2/4
+   [-1, 3, Bottleneck, [128, True, 1, 0.5, 'relu']], # 2
+   [-1, 1, Conv, [256, 3, 2, None, 1, True, 'relu']],  # 3-P3/8
+   [-1, 9, Bottleneck, [256, True, 1, 0.5, 'relu']], # 4
+   [-1, 1, Conv, [512, 3, 2, None, 1, True, 'relu']],  # 5-P4/16
+   [-1, 9, Bottleneck, [512, True, 1, 0.5, 'relu']], # 6
+   [-1, 1, Conv, [1024, 3, 2, None, 1, True, 'relu']],  # 7-P5/32
+   [-1, 1, SPP, [1024, [5, 9, 13], 'relu']], # 8
+   [-1, 3, Bottleneck, [1024, False, 1, 0.5, 'relu']],  # 9
   ]
 
 # YOLOv5 head
 head:
-  [[-1, 3, Bottleneck, [1024, False]],  # 10
+  [[-1, 3, Bottleneck, [1024, False, 1, 0.5, 'relu']],  # 10
    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 11
-  #  [-1, 1, nn.Upsample, ["tuple32,42", None, 'nearest']], # 11
    [[-1, 6], 1, Concat, [1]],  # cat backbone P4, 12
-   [-1, 1, Conv, [512, 1, 1]], # 13
-   [-1, 3, Bottleneck, [512, False]], # 14
+   [-1, 1, Conv, [512, 1, 1, None, 1, True, 'relu']], # 13
+   [-1, 3, Bottleneck, [512, False, 1, 0.5, 'relu']], # 14
    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 15
-    # [-1, 1, nn.Upsample, ["tuple64,84", None, 'nearest']],
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3, 16
-   [-1, 1, Conv, [256, 1, 1]], # 17
-   [-1, 3, Bottleneck, [256, False]], # 18
+   [-1, 1, Conv, [256, 1, 1, None, 1, True, 'relu']], # 17
+   [-1, 3, Bottleneck, [256, False, 1, 0.5, 'relu']], # 18
    [[18, 14, 10], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
   ]
